--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,5 +9,7 @@ edition = "2018"
 [dependencies]
 anyhow = "1.0.34"
 attohttpc = { version = "0.16.0", features = ["json"] }
+pico-args = "0.3.4"
 serde = { version = "1.0.117", features = ["derive"] }
+serde_json = "1.0.59"
 time = "0.2.22"
