--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,9 @@
 [package]
-name = "what_stream"
+name    = "what_stream"
 version = "0.1.0"
 authors = ["museun <museun@outlook.com>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+license = "0BSD"
 
 [dependencies]
 anyhow = "1.0.34"
@@ -12,4 +11,8 @@ attohttpc = { version = "0.16.0", features = ["json"] }
 pico-args = "0.3.4"
 serde = { version = "1.0.117", features = ["derive"] }
 serde_json = "1.0.59"
+terminal_size = "0.1.13"
 time = "0.2.22"
+unicode-segmentation = "1.6.0"
+unicode-width = "0.1.8"
+yansi = "0.5.0"
