--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ license = "0BSD"
 
 [dependencies]
 anyhow = "1.0.34"
-attohttpc = { version = "0.16.0", features = ["json"] }
+attohttpc = { version = "0.16.0", default-features = false, features = ["json", "tls"] }
 pico-args = "0.3.4"
 serde = { version = "1.0.117", features = ["derive"] }
 serde_json = "1.0.59"
