--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,18 +1,18 @@
 [package]
 name    = "what_stream"
-version = "0.2.1"
+version = "0.2.2"
 authors = ["museun <museun@outlook.com>"]
 edition = "2018"
 license = "0BSD"
 
 [dependencies]
-anyhow = "1.0.34"
-attohttpc = { version = "0.16.0", default-features = false, features = ["json", "tls"] }
-chrono = { version = "0.4.19", default-features = false, features = ["clock"] }
-pico-args = "0.3.4"
-serde = { version = "1.0.117", features = ["derive"] }
-serde_json = "1.0.59"
-terminal_size = "0.1.13"
+anyhow               = "1.0.34"
+chrono               = { version = "0.4.19", default-features = false, features = ["clock"] }
+pico-args            = "0.3.4"
+serde                = { version = "1.0.117", features = ["derive"] }
+serde_json           = "1.0.59"
+terminal_size        = "0.1.13"
 unicode-segmentation = "1.6.0"
-unicode-width = "0.1.8"
-yansi = "0.5.0"
+unicode-width        = "0.1.8"
+ureq                 = { version = "1.5.2", default-features = false, features = ["json", "tls"] } #native-tls
+yansi                = "0.5.0"
