--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,12 @@ license              = "0BSD"
 [dependencies]
 anyhow               = "1.0.40"
 chrono               = { version = "0.4.19", default-features = false, features = ["clock"] }
+dirs = "3.0.2"
 pico-args            = "0.4.2"
 serde                = { version = "1.0.126", features = ["derive"] }
 serde_json           = "1.0.64"
 terminal_size        = "0.1.17"
+toml                 = "0.5.8"
 unicode-segmentation = "1.7.1"
 unicode-width        = "0.1.8"
 ureq                 = { version = "2.1.1", default-features = false, features = ["json", "tls"] } #native-tls
