--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,11 @@ edition              = "2021"
 license              = "0BSD"
 
 [dependencies]
+alto_logger = "0.3.7"
 anyhow               = "1.0.58"
 chrono               = { version = "0.4.19", default-features = false, features = ["clock"] }
 dirs                 = "4.0.0"
+log = "0.4.17"
 pico-args            = "0.5.0"
 serde                = { version = "1.0.137", features = ["derive"] }
 serde_json           = "1.0.81"
