--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,22 +1,5 @@
-[package]
-name                 = "what_stream"
-version              = "0.6.0"
-authors              = ["museun <museun@outlook.com>"]
-edition              = "2021"
-license              = "0BSD"
-
-[dependencies]
-alto_logger = "0.3.7"
-anyhow               = "1.0.58"
-chrono               = { version = "0.4.19", default-features = false, features = ["clock"] }
-dirs                 = "4.0.0"
-log = "0.4.17"
-pico-args            = "0.5.0"
-serde                = { version = "1.0.137", features = ["derive"] }
-serde_json           = "1.0.81"
-terminal_size        = "0.1.17"
-toml                 = "0.5.9"
-unicode-segmentation = "1.9.0"
-unicode-width        = "0.1.9"
-ureq                 = { version = "2.4.0", default-features = false, features = ["json", "tls"] } #native-tls
-yansi                = "0.5.1"
+[workspace]
+members = [
+    "what_stream_core",
+    "what_stream_tui",
+]
